update README, INSTALL & THANKS

--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,5 @@
 
-ThanK you!
+Thank you!
 
 John Chowning: for working with us to design many new features and for 
 using sndpeek to visualize Stria!
