--- a/AUTHORS
+++ b/AUTHORS
@@ -5,7 +5,7 @@ sndpeek was originally created by Ge Wang for the
 
 ---
 authors of sndpeek:
-Ge Wang (gewang@cs.princeton.edu)
+Ge Wang (http://www.gewang.com/)
 Perry R. Cook (prc@cs.princeton.edu)
 Ananya Misra (amisra@cs.princeton.edu)
 
@@ -19,8 +19,4 @@ lead design/development:
 
 ---
 homepage:
-    http://soundlab.cs.princeton.edu/software/sndpeek/
-
-princeton Sound Lab:
-    http://soundlab.cs.princeton.edu/
-
+    http://www.gewang.com/software/sndpeek/
